Fixed Start Game button not showing on mobile

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -129,8 +129,6 @@ button {
   background-color: #121212;
 }
 .lobby-group {
-  height: 100%;
-  width: 25%;
   display: flex;
   justify-content: center;
   align-items: center;
